res/examples/invalid/block_expr_with_stmts_and_expr_after_return_stmt.eg
{
    return 123;
    1 + 5;
    false;
    123
};

// out: SyntaxError: unreachable code
// out: SyntaxError: unreachable code
// out: SyntaxError: unreachable code